--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -28,6 +28,7 @@
     "jwks-rsa": "^1.4.0",
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5",
+    "ramda": "^0.27.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
